<resources>
    <string name="app_name">Booking&amp;Bulking</string>
    <string name="by">Powered by Buff BIT</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Booking&amp;Bulking</string>

    <!-- Menu Activity -->
    <string name="booking">Booking</string>
    <string name="gym_safety_policy">Gym Safety Policy</string>
    <string name="gym_info">Gym Information</string>
    <string name="your_acc">Your Account</string>
    <string name="signout">Signout</string>

    <!-- Gym information -->
    <string name="gym_info_title">Gym Information</string>
    <string name="info_covid">Covid Hours:</string>
    <string name="info_phone">Phone number:</string>
    <string name="info_address">Address:</string>
    <string name="info_capacity">Max Capacity:</string>
    <string-array name="weekdays">
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thurs</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="info_hourMon">Mon:</string>
    <string name="info_hourTues">Tues:</string>
    <string name="info_hourWed">Wed:</string>
    <string name="info_hourThurs">Thurs:</string>
    <string name="info_hourFri">Fri:</string>
    <string name="info_hourSat">Sat:</string>
    <string name="info_hourSun">Sun:</string>

    <!-- Edit Account Activity -->
    <string name="edit_username_hint">Firstname Lastname</string>
    <string name="edit_acc">Edit Account</string>
    <string name="update_btn">Update</string>
    <string name="change_btn">Change</string>

    <!-- Booking information -->
    <string name="booking_title">Current Bookings</string>
    <string name="booking_equip">Equipment:</string>
    <string name="booking_date">Date:</string>
    <string name="booking_time">Time slot:</string>
    <string name="booking_add">Add</string>
    <string name="booking_edit">Edit</string>
    <string name="booking_delete">Delete</string>
    <string name="back_button">Back</string>

    <!-- Adding new booking information -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_time">Choose time:</string>
    <string name="selection_hint">Select up to 4</string>

    <string name="edit_booking">Edit Booking</string>
    <string name="new_booking">New Booking</string>
    <string name="currentCap">Current Capacity: </string>
    <string name="new_booking_add">Add</string>
    <string name="new_booking_cancel">Cancel</string>

    <string name="edit_booking_date">New date</string>
    <string name="edit_booking_date_hint">Pick a date</string>
    <string name="check_btn">Check</string>
    <string name="edit_booking_update">Update</string>
    <string name="edit_booking_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_your_account">YourAccountActivity</string>

    <!-- Policy Activity -->
    <string-array name="policies">
        <item>All fitness centre workouts &amp; classes require advanced bookings on the Bookings&amp;Bulking service app, per first-come-first-serve policy.</item>
        <item>Access to fitness facilities is limited to registered persons.</item>
        <item>Fitness centre and class capacity is limited per time slot/class to allow for distancing.</item>
        <item>Spotting, working out in partners/groups, or working in with other members are not allowed at this time.</item>
        <item>Signs and directions are posted throughout the facility to guide traffic flow and queueing spots.</item>
        <item>All members will receive a cleaning spray bottle to use during their workout.</item>
        <item>Members are required to clean their equipment before and after each use.</item>
        <item>Areas (pods) within the fitness centre free weight &amp; stretching areas will be designated for individual workouts.</item>
        <item>For fitness classes, individual work out spaces (pods) will be assigned upon entry into the activity space</item>
        <item>Please arrive no sooner than 10 minutes before your booked workout session, as late arrivals will not be permitted inside.</item>
        <item>Please have your booking information &amp; valid member ID with you for confirmation\'s purposes.</item>
        <item>Equipment is booked based on first-come-first-serve policy.</item>
        <item>In case of equipment conflicts, both parties will be asked to show their booking information. If neither parties can prove for their reservation, both will be asked to dismiss from the designated area.</item>
        <item>Participants are welcome to bring their own towels and yoga mats, but are not allowed to share equipment with others.</item>
        <item>Members are encouraged to bring their own towel and personal water bottle.</item>
        <item>All water fountains are closed. If needed, please refill your water bottle at a tap in a washroom.</item>
        <item>All members should continue to arrive changed and ready to workout whenever possible.</item>
        <item>Gym\'s washrooms, change rooms, showers, and workout lockers are available with restrictions and limited capacities.</item>
        <item>Members are to adhere to all directional signage, time limits and capacity limits in the change areas and showers.</item>
        <item>Showers have re-opened with limited capacities; guests are encouraged to shower at home when possible.</item>
        <item>Members must bring their own shower products to use in the shower spaces, no soap nor shampoo will be available.</item>
        <item>Members must bring their own personal lock for locker use during their workout (locks will not be provided), and are responsible for removing the contents and lock immediately after their activity has concluded.</item>
        <item>Please stay home if you are not feeling well.</item>
        <item>No bookings. No bulking.</item>
    </string-array>
    <string name="policity_title">"Please note there are currently additional safety protocols in place" +
                        " as we reopen during the COVID-19 pandemic. Where these rules differ from" +
                        " what’s listed below, the "</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- YourAccountActivity-->
    <string name="username_label">User name</string>
    <!-- Silly motivation slogan for YourAccountActivity-->
    <string-array name="slogans">
        <item>\"Do you even Book bro?!\"</item>
        <item>\"No book. No bulk.\"</item>
        <item>\"Booking is the lifestyle.\"</item>
        <item>\"First rule of the Booking club, please share about the Booking club.\"</item>
        <item>\"Booking is the way.\"</item>
    </string-array>

</resources>