<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/inner_frame_layout_padding"
    android:gravity="center_horizontal"
    android:orientation="vertical">
        <TextView
            android:id="@+id/booking_gym_name_textview_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_header0"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/inner_frame_layout_padding"/>

        <Button
            android:id="@+id/booking_add_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_booking_date"/>

        <TextView
            android:id="@+id/booking_date_textview_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:hint="@string/edit_booking_date_hint" />

        <TextView
            android:id="@+id/date_label_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>
        <!--
            <Spinner
                android:id="@+id/spinner_date"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        -->

        <Spinner
            android:id="@+id/spinner_time_edit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <TableRow
            android:id="@+id/booking_cap_label_edit"
            android:layout_width="wrap_content"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/current_cap_textview_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/label_width"
                android:text="@string/currentCap"
                android:textSize="@dimen/text_size_header"
                android:textStyle="bold"
                android:textColor="@color/textColor"/>
        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selection_hint"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_header"
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/inner_frame_layout_padding"/>

        <com.bcit.bb.uiFeatures.MultiSelectionSpinner
            android:id="@+id/booking_spinner_equip_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/selection_hint" />

        <Button
            android:id="@+id/booking_edit"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="onNewBookingAddClick"
            android:text="@string/edit_booking_update"
            />

        <Button
            android:id="@+id/booking_edit_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:onClick="onNewBookingCancelClick"
            android:text="@string/new_booking_cancel" />

    </LinearLayout>
</ScrollView>
