<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".InformationActivity"
        android:orientation="vertical"
        android:padding="@dimen/inner_frame_layout_padding">
        <TextView
            android:id="@+id/info_gym_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_header"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/label_width"
            android:layout_marginBottom="@dimen/label_width"
            tools:context=".InformationActivity" />

        <TextView
            android:id="@+id/covid_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_covid"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_header2"
            android:textColor="@color/textColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_frame_layout_padding">

            <TextView
                android:id="@+id/monday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourMon"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>


            <TextView
                android:id="@+id/info_hour_mon_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/tuesday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourTues"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_hour_tues_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:textColor="@color/textColor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_frame_layout_padding">

            <TextView
                android:id="@+id/wednesday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourWed"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_hour_wed_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/thursday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourThurs"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_hour_thur_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:textColor="@color/textColor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_frame_layout_padding">

            <TextView
                android:id="@+id/friday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourFri"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_hour_fri_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/saturday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourSat"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_hour_sat_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:textColor="@color/textColor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_frame_layout_padding">
            <TextView
                android:id="@+id/sunday_label"
                android:layout_width="@dimen/label_width"
                android:layout_height="wrap_content"
                android:text="@string/info_hourSun"
                android:layout_weight="1"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_hour_sun_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:textAlignment="textStart"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/phonenumber_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_phone"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_header2"
            android:layout_marginRight="@dimen/label_width"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/info_gym_phone_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_frame_layout_padding">
            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_address"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_header2"
                android:layout_marginRight="@dimen/label_width"
                android:textColor="@color/textColor"/>
            <TextView
                android:id="@+id/info_gym_street_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/info_gym_city_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/inner_frame_layout_padding">
            <TextView
                android:id="@+id/max_capacity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_capacity"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_header2"
                android:layout_marginRight="@dimen/label_width"
                android:textColor="@color/textColor"/>
            <TextView
                android:id="@+id/info_gym_cap_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>