<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_booking"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/booking_gym_name_textview"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:text="gymname" />

    <EditText
        android:id="@+id/booking_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="Enter Date" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"

        android:textStyle="bold"
        android:textSize="18dp"/>
<!--
    <Spinner
        android:id="@+id/spinner_date"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />
-->

    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="75dp">

        <TextView
            android:id="@+id/current_cap_textview"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/currentCap"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="checkCapacityClick"
            android:text="Check" />
    </TableRow>

    <Spinner
        android:id="@+id/spinner_equipment"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/booking_add"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onNewBookingUpdateClick"
        android:text="ADD" />

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:onClick="onNewBookingCancelClick"
        android:text="@string/new_booking_cancel" />

</LinearLayout>
