<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        tools:context=".MenuActivity"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signout_layout">
            <Button
                android:id="@+id/signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onGymSignoutClick"
                android:text="@string/signout"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
            />
        </RelativeLayout>

        <ImageView
            android:id="@+id/app_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:textAlignment="center"
            android:layout_below="@id/signout_layout"
            android:src="@drawable/bb_text_v2"/>

        <LinearLayout
            android:id="@+id/booking_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_name_tv"
            android:layout_centerInParent="true">

            <ImageButton
                android:id="@+id/booking_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:src="@drawable/booking"
                android:text="@string/booking"
                android:onClick="onBookingClick"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/gym_policy_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:src="@drawable/policy"
                android:layout_marginBottom="5dp"
                android:onClick="onPolicyClick"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/booking_layout">
            <ImageButton
                android:id="@+id/gym_info_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:src="@drawable/info"
                android:layout_marginBottom="5dp"
                android:onClick="onGymInfoClick"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/your_acc_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:src="@drawable/account"
                android:text="@string/your_acc"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_weight="1"
                android:onClick="onAccClick"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
